@@ -92,12 +92,13 @@ class Mnemo_Application extends Horde_Registry_Application
      */
     public function hasPermission($permission, $allowed, $opts = array())
     {
-        switch ($permission) {
-        case 'max_notes':
-            $allowed = max($allowed);
-            break;
+        if (is_array($allowed)) {
+            switch ($permission) {
+            case 'max_notes':
+                $allowed = max($allowed);
+                break;
+            }
         }
-
         return $allowed;
     }
 
